qt-restricted-extras/qscintilla6/gen_qscilexersql.h

class QColor;
class QFont;
class QMetaObject;
class QObject;
class QsciLexerSQL;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSettings QSettings;
typedef struct QTimerEvent QTimerEvent;
typedef struct QsciLexerSQL QsciLexerSQL;
bool QsciLexerSQL_override_virtual_wordCharacters(void* self, intptr_t slot);
bool QsciLexerSQL_override_virtual_setAutoIndentStyle(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_setAutoIndentStyle(void* self, int autoindentstyle);
bool QsciLexerSQL_override_virtual_setColor(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_setColor(void* self, QColor* c, int style);
bool QsciLexerSQL_override_virtual_setEolFill(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_setEolFill(void* self, bool eoffill, int style);
bool QsciLexerSQL_override_virtual_setFont(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_setFont(void* self, QFont* f, int style);
bool QsciLexerSQL_override_virtual_setPaper(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_setPaper(void* self, QColor* c, int style);
bool QsciLexerSQL_override_virtual_readProperties(void* self, intptr_t slot);
bool QsciLexerSQL_virtualbase_readProperties(void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerSQL_override_virtual_writeProperties(void* self, intptr_t slot);
bool QsciLexerSQL_virtualbase_writeProperties(const void* self, QSettings* qs, struct miqt_string prefix);
bool QsciLexerSQL_override_virtual_event(void* self, intptr_t slot);
bool QsciLexerSQL_virtualbase_event(void* self, QEvent* event);
bool QsciLexerSQL_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciLexerSQL_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QsciLexerSQL_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciLexerSQL_override_virtual_childEvent(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciLexerSQL_override_virtual_customEvent(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_customEvent(void* self, QEvent* event);
bool QsciLexerSQL_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciLexerSQL_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciLexerSQL_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QsciLexerSQL_staticMetaObject();
void QsciLexerSQL_delete(QsciLexerSQL* self);