qt-restricted-extras/qscintilla6/gen_qscilexersql.nim

proc fcQsciLexerSQL_override_virtual_wordCharacters(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_wordCharacters".}
proc fQsciLexerSQL_virtualbase_setAutoIndentStyle(self: pointer, autoindentstyle: cint): void{.importc: "QsciLexerSQL_virtualbase_setAutoIndentStyle".}
proc fcQsciLexerSQL_override_virtual_setAutoIndentStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setAutoIndentStyle".}
proc fQsciLexerSQL_virtualbase_setColor(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerSQL_virtualbase_setColor".}
proc fcQsciLexerSQL_override_virtual_setColor(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setColor".}
proc fQsciLexerSQL_virtualbase_setEolFill(self: pointer, eoffill: bool, style: cint): void{.importc: "QsciLexerSQL_virtualbase_setEolFill".}
proc fcQsciLexerSQL_override_virtual_setEolFill(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setEolFill".}
proc fQsciLexerSQL_virtualbase_setFont(self: pointer, f: pointer, style: cint): void{.importc: "QsciLexerSQL_virtualbase_setFont".}
proc fcQsciLexerSQL_override_virtual_setFont(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setFont".}
proc fQsciLexerSQL_virtualbase_setPaper(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerSQL_virtualbase_setPaper".}
proc fcQsciLexerSQL_override_virtual_setPaper(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setPaper".}
proc fQsciLexerSQL_virtualbase_readProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerSQL_virtualbase_readProperties".}
proc fcQsciLexerSQL_override_virtual_readProperties(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_readProperties".}
proc fQsciLexerSQL_virtualbase_writeProperties(self: pointer, qs: pointer, prefix: struct_miqt_string): bool{.importc: "QsciLexerSQL_virtualbase_writeProperties".}
proc fcQsciLexerSQL_override_virtual_writeProperties(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_writeProperties".}
proc fQsciLexerSQL_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QsciLexerSQL_virtualbase_event".}
proc fcQsciLexerSQL_override_virtual_event(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_event".}
proc fQsciLexerSQL_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QsciLexerSQL_virtualbase_eventFilter".}
proc fcQsciLexerSQL_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_eventFilter".}
proc fQsciLexerSQL_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciLexerSQL_virtualbase_timerEvent".}
proc fcQsciLexerSQL_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_timerEvent".}
proc fQsciLexerSQL_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciLexerSQL_virtualbase_childEvent".}
proc fcQsciLexerSQL_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_childEvent".}
proc fQsciLexerSQL_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciLexerSQL_virtualbase_customEvent".}
proc fcQsciLexerSQL_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_customEvent".}
proc fQsciLexerSQL_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerSQL_virtualbase_connectNotify".}
proc fcQsciLexerSQL_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_connectNotify".}
proc fQsciLexerSQL_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciLexerSQL_virtualbase_disconnectNotify".}
proc fcQsciLexerSQL_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_disconnectNotify".}
proc fcQsciLexerSQL_staticMetaObject(): pointer {.importc: "QsciLexerSQL_staticMetaObject".}
proc fcQsciLexerSQL_delete(self: pointer) {.importc: "QsciLexerSQL_delete".}


func init*(T: type gen_qscilexersql_types.QsciLexerSQL, h: ptr cQsciLexerSQL): gen_qscilexersql_types.QsciLexerSQL =
  T(h: h)
proc create*(T: type gen_qscilexersql_types.QsciLexerSQL, ): gen_qscilexersql_types.QsciLexerSQL =
  gen_qscilexersql_types.QsciLexerSQL.init(fcQsciLexerSQL_new())

proc create*(T: type gen_qscilexersql_types.QsciLexerSQL, parent: gen_qobject.QObject): gen_qscilexersql_types.QsciLexerSQL =
  gen_qscilexersql_types.QsciLexerSQL.init(fcQsciLexerSQL_new2(parent.h))

proc metaObject*(self: gen_qscilexersql_types.QsciLexerSQL, ): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fcQsciLexerSQL_metaObject(self.h))

proc metacast*(self: gen_qscilexersql_types.QsciLexerSQL, param1: cstring): pointer =
  fcQsciLexerSQL_metacast(self.h, param1)

proc metacall*(self: gen_qscilexersql_types.QsciLexerSQL, param1: cint, param2: cint, param3: pointer): cint =
  fcQsciLexerSQL_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qscilexersql_types.QsciLexerSQL, s: cstring): string =
  let v_ms = fcQsciLexerSQL_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc language*(self: gen_qscilexersql_types.QsciLexerSQL, ): cstring =
  (fcQsciLexerSQL_language(self.h))

proc lexer*(self: gen_qscilexersql_types.QsciLexerSQL, ): cstring =
  (fcQsciLexerSQL_lexer(self.h))

proc braceStyle*(self: gen_qscilexersql_types.QsciLexerSQL, ): cint =
  fcQsciLexerSQL_braceStyle(self.h)

proc defaultColor*(self: gen_qscilexersql_types.QsciLexerSQL, style: cint): gen_qcolor.QColor =
  gen_qcolor.QColor(h: fcQsciLexerSQL_defaultColor(self.h, style))

proc defaultEolFill*(self: gen_qscilexersql_types.QsciLexerSQL, style: cint): bool =
  fcQsciLexerSQL_defaultEolFill(self.h, style)

proc defaultFont*(self: gen_qscilexersql_types.QsciLexerSQL, style: cint): gen_qfont.QFont =
  gen_qfont.QFont(h: fcQsciLexerSQL_defaultFont(self.h, style))

proc defaultPaper*(self: gen_qscilexersql_types.QsciLexerSQL, style: cint): gen_qcolor.QColor =
  gen_qcolor.QColor(h: fcQsciLexerSQL_defaultPaper(self.h, style))

proc keywords*(self: gen_qscilexersql_types.QsciLexerSQL, set: cint): cstring =
  (fcQsciLexerSQL_keywords(self.h, set))

proc description*(self: gen_qscilexersql_types.QsciLexerSQL, style: cint): string =
  let v_ms = fcQsciLexerSQL_description(self.h, style)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc refreshProperties*(self: gen_qscilexersql_types.QsciLexerSQL, ): void =
  fcQsciLexerSQL_refreshProperties(self.h)

proc backslashEscapes*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_backslashEscapes(self.h)

proc setDottedWords*(self: gen_qscilexersql_types.QsciLexerSQL, enable: bool): void =
  fcQsciLexerSQL_setDottedWords(self.h, enable)

proc dottedWords*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_dottedWords(self.h)

proc setFoldAtElse*(self: gen_qscilexersql_types.QsciLexerSQL, fold: bool): void =
  fcQsciLexerSQL_setFoldAtElse(self.h, fold)

proc foldAtElse*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_foldAtElse(self.h)

proc foldComments*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_foldComments(self.h)

proc foldCompact*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_foldCompact(self.h)

proc setFoldOnlyBegin*(self: gen_qscilexersql_types.QsciLexerSQL, fold: bool): void =
  fcQsciLexerSQL_setFoldOnlyBegin(self.h, fold)

proc foldOnlyBegin*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_foldOnlyBegin(self.h)

proc setHashComments*(self: gen_qscilexersql_types.QsciLexerSQL, enable: bool): void =
  fcQsciLexerSQL_setHashComments(self.h, enable)

proc hashComments*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_hashComments(self.h)

proc setQuotedIdentifiers*(self: gen_qscilexersql_types.QsciLexerSQL, enable: bool): void =
  fcQsciLexerSQL_setQuotedIdentifiers(self.h, enable)

proc quotedIdentifiers*(self: gen_qscilexersql_types.QsciLexerSQL, ): bool =
  fcQsciLexerSQL_quotedIdentifiers(self.h)

proc setBackslashEscapes*(self: gen_qscilexersql_types.QsciLexerSQL, enable: bool): void =
  fcQsciLexerSQL_setBackslashEscapes(self.h, enable)

proc setFoldComments*(self: gen_qscilexersql_types.QsciLexerSQL, fold: bool): void =
  fcQsciLexerSQL_setFoldComments(self.h, fold)

proc setFoldCompact*(self: gen_qscilexersql_types.QsciLexerSQL, fold: bool): void =
  fcQsciLexerSQL_setFoldCompact(self.h, fold)

proc tr*(_: type gen_qscilexersql_types.QsciLexerSQL, s: cstring, c: cstring): string =
  let v_ms = fcQsciLexerSQL_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qscilexersql_types.QsciLexerSQL, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQsciLexerSQL_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QsciLexerSQLmetaObject*(self: gen_qscilexersql_types.QsciLexerSQL, ): gen_qobjectdefs.QMetaObject =
  gen_qobjectdefs.QMetaObject(h: fQsciLexerSQL_virtualbase_metaObject(self.h))

type QsciLexerSQLmetaObjectProc* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: gen_qscilexersql_types.QsciLexerSQL, slot: QsciLexerSQLmetaObjectProc) =
  # TODO check subclass
  var tmp = new QsciLexerSQLmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerSQL_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerSQL_metaObject(self: ptr cQsciLexerSQL, slot: int): pointer {.exportc: "miqt_exec_callback_QsciLexerSQL_metaObject ".} =
  var nimfunc = cast[ptr QsciLexerSQLmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QsciLexerSQLmetacast*(self: gen_qscilexersql_types.QsciLexerSQL, param1: cstring): pointer =
  fQsciLexerSQL_virtualbase_metacast(self.h, param1)

type QsciLexerSQLmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qscilexersql_types.QsciLexerSQL, slot: QsciLexerSQLmetacastProc) =
  # TODO check subclass
  var tmp = new QsciLexerSQLmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerSQL_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerSQL_metacast(self: ptr cQsciLexerSQL, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QsciLexerSQL_metacast ".} =
  var nimfunc = cast[ptr QsciLexerSQLmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QsciLexerSQLmetacall*(self: gen_qscilexersql_types.QsciLexerSQL, param1: cint, param2: cint, param3: pointer): cint =
  fQsciLexerSQL_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QsciLexerSQLmetacallProc* = proc(param1: cint, param2: cint, param3: pointer): cint
proc onmetacall*(self: gen_qscilexersql_types.QsciLexerSQL, slot: QsciLexerSQLmetacallProc) =
  # TODO check subclass
  var tmp = new QsciLexerSQLmetacallProc
  tmp[] = slot
  GC_ref(tmp)
  fcQsciLexerSQL_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QsciLexerSQL_metacall(self: ptr cQsciLexerSQL, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QsciLexerSQL_metacall ".} =
  var nimfunc = cast[ptr QsciLexerSQLmetacallProc](cast[pointer](slot))
  let slotval1 = cint(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](slotval1, slotval2, slotval3 )

  virtualReturn
proc QsciLexerSQLsetBackslashEscapes*(self: gen_qscilexersql_types.QsciLexerSQL, enable: bool): void =
  fQsciLexerSQL_virtualbase_setBackslashEscapes(self.h, enable)
